tests/feature_tests/snapshots/e2e__feature_tests__latest_lts__Bash.snap
---
source: tests/feature_tests/mod.rs
expression: "&source.trim()"
---
set -e
shopt -s expand_aliases

eval "$(fnm env)"
fnm install --lts
fnm ls | grep lts-latest
fnm use 'lts/*'
