tests/feature_tests/snapshots/e2e__feature_tests__latest_lts__Fish.snap
---
source: tests/feature_tests/mod.rs
expression: "&source.trim()"
---
fnm env | source
fnm install --lts
fnm ls | grep lts-latest
fnm use 'lts/*'
