tests/feature_tests/snapshots/e2e__feature_tests__latest_lts__Zsh.snap
---
source: tests/feature_tests/mod.rs
expression: "&source.trim()"
---
set -e
eval "$(fnm env)"
fnm install --lts
fnm ls | grep lts-latest
fnm use 'lts/*'
